# ops-automation

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: rules.yaml
docs/reference/: aws.md  logging.md  monitoring.md
scripts/: aws-clean.sh  check_services.py  monitor.sh  run_aws_cleanup.py
src/ops_core/aws/: snapshots.py
src/ops_core/common/: config.py  log.py
src/ops_core/health/: checker.py
tests/: test_aws_snapshots.py  test_log.py
